pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constAnnotation2.pkl
import "pkl:reflect"

class Ann extends Annotation {
  foo: Int
}

top = 5

@Ann { foo = top }
class Foo {}

ann = reflect.Class(Foo).annotations[0]
